At a good point. Might want to transisition to backEnd?

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,3 +5,9 @@
 .selectedFunction {
   padding: 20px;
 }
+.layout {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-5%, -50%);
+}
